# swe-extractor

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  swe-extract-app.py
sample_data/export_data/: README.md
sample_data/img_data/: ex1.tif  ex3.tif  ex4.tif
